--- a/event/index.html
+++ b/event/index.html
@@ -51,82 +51,82 @@
     <section id="event" class="container mx-auto">
         <div class="px-6 md:px-10 lg:px-20 mx-16">
             <div class="pb-12">
-                <div class="text-2xl text-white font-bold text-center">
+                <div class="text-3xl pb-1 text-white font-bold text-center">
                     Rules
                 </div>
-                <div class="max-w-2xl mx-auto text-center text-gray-500 pt-2">
+                <div class="max-w-2xl mx-auto text-center text-gray-500">
                     <p>
-                        Welcome to the Minecraft Tournaments rules page! This page is designed to make understanding our
-                        rules simple and easy. Rules are expected to be followed by all participants, regardless of their
+                        Welcome to the Minecraft Tournaments rules section! This section is designed to make
+                        understanding our
+                        rules simple and easy. Rules are expected to be followed by all participants, regardless of
+                        their
                         rank or time played on the server.
                     </p>
                     <p class="pt-2">
-                        Our staff team works incredibly hard to keep Minecraft Tournament safe and enjoyable for all contestants. If you find yourself being
-                        warned by a member of our team (Moderator, Admin) you are expected to respect their decision and work with them to resolve the situation.
+                        Our staff team works incredibly hard to keep Minecraft Tournament safe and enjoyable for all
+                        contestants. If you find yourself being
+                        warned by a member of our team (Moderator, Admin) you are expected to respect their decision and
+                        work with them to resolve the situation.
                     </p>
                 </div>
             </div>
-            <div class="content pb-10">
+            <div class="content pt-8 pb-10">
                 <div class="rules pt-12">
                     <p class="text-6xl font-bold">
                         Inappropriate Chat Conduct
                     </p>
                     <p class="text-sm text-gray-500 mb-4">
-                        The way users conduct themselves in our chat is incredibly important, as Minecraft Tournament aims to be a
-                        friendly place for players of all ages. Below are examples of the kind of conduct that will result
+                        The way users conduct themselves in our chat is incredibly important, as Minecraft Tournament
+                        aims to be a
+                        friendly place for players of all ages. Below are examples of the kind of conduct that will
+                        result
                         in a punishment
                     </p>
                     <ul class="text-lg text-gray-400 mt-12">
                         <li class="rules-li">
                             <div class="flex items-center">
-                                <div class="rules-num">1</div>
-                                <span class="block text-gray-300 font-bold ml-4">
-                                    &nbsp;
+                                <div class="rules-num flex-none">1</div>
+                                <span class="block text-gray-300 font-bold pl-4">
                                     Disrespectful/offensive language and hate speech.
                                 </span>
                             </div>
                         </li>
                         <li class="rules-li">
                             <div class="flex items-center">
-                                <div class="rules-num">2</div>
-                                <span class="block text-gray-300 font-bold ml-4">
-                                    &nbsp;
+                                <div class="rules-num flex-none">2</div>
+                                <span class="block text-gray-300 font-bold pl-4">
                                     Racism and Discrimination.
                                 </span>
                             </div>
                         </li>
                         <li class="rules-li">
                             <div class="flex items-center">
-                                <div class="rules-num">3</div>
-                                <span class="block text-gray-300 font-bold ml-4">
-                                    &nbsp;
+                                <div class="rules-num flex-none">3</div>
+                                <span class="block text-gray-300 font-bold pl-4">
                                     Spamming or rioting of any kind.
                                 </span>
                             </div>
                         </li>
                         <li class="rules-li">
                             <div class="flex items-center">
-                                <div class="rules-num">4</div>
-                                <span class="block text-gray-300 font-bold ml-4">
-                                    &nbsp;
+                                <div class="rules-num flex-none">4</div>
+                                <span class="block text-gray-300 font-bold pl-4">
                                     Harassing and abusing others.
                                 </span>
                             </div>
                         </li>
                         <li class="rules-li">
                             <div class="flex items-center">
-                                <div class="rules-num">5</div>
-                                <span class="block text-gray-300 font-bold ml-4">
-                                    &nbsp;
+                                <div class="rules-num flex-none">5</div>
+                                <span class="block text-gray-300 font-bold pl-4">
                                     Sharing personal information regarding others.
                                 </span>
                             </div>
                         </li>
                         <li class="rules-li">
                             <div class="flex items-center">
-                                <div class="rules-num">6</div>
-                                <span class="block text-gray-300 font-bold ml-4">
-                                    &nbsp;
+                                <div class="rules-num flex-none">6</div>
+                                <span class="block text-gray-300 font-bold pl-4">
                                     Advertising other servers or IP's.
                                 </span>
                             </div>
@@ -139,16 +139,17 @@
                         Inappropriate Behavior
                     </p>
                     <p class="text-sm text-gray-500 mb-4">
-                        We expect our users to behave in an appropriate and respectful manner at all times. Minecraft Turnament is designed to be a
-                        non-competitive casual game, not a place to cause havoc. Below are examples of behaviour that will result in a
+                        We expect our users to behave in an appropriate and respectful manner at all times. Minecraft
+                        Turnament is designed to be a
+                        non-competitive casual game, not a place to cause havoc. Below are examples of behaviour that
+                        will result in a
                         punishment, and remember; your account is your responsibility!
                     </p>
                     <ul class="text-lg text-gray-400 mt-12">
                         <li class="rules-li">
                             <div class="flex items-center">
-                                <div class="rules-num">1</div>
-                                <span class="block text-gray-300 font-bold ml-4">
-                                    &nbsp;
+                                <div class="rules-num flex-none">1</div>
+                                <span class="block text-gray-300 font-bold pl-4">
                                     Inappropriate account names and skins.
                                 </span>
                             </div>
@@ -161,43 +162,41 @@
                         Hacked Clients & Modifications
                     </p>
                     <p class="text-sm text-gray-500 mb-4">
-                        Minecraft Tournament does not permit the use of any clients or modifications that provide an unfair advantage. When choosing
-                        modifications to add to your game, please use our common sense approach (Does it give you an advantage over other
+                        Minecraft Tournament does not permit the use of any clients or modifications that provide an
+                        unfair advantage. When choosing
+                        modifications to add to your game, please use our common sense approach (Does it give you an
+                        advantage over other
                         players?), if the answer is yes, please don't use that modification.
                     </p>
                     <ul class="text-lg text-gray-400 mt-12">
                         <li class="rules-li">
                             <div class="flex items-center">
-                                <div class="rules-num">1</div>
-                                <span class="block text-gray-300 font-bold ml-4">
-                                    &nbsp;
+                                <div class="rules-num flex-none">1</div>
+                                <span class="block text-gray-300 font-bold pl-4">
                                     X-ray resource packs/modifications.
                                 </span>
                             </div>
                         </li>
                         <li class="rules-li">
                             <div class="flex items-center">
-                                <div class="rules-num">2</div>
-                                <span class="block text-gray-300 font-bold ml-4">
-                                    &nbsp;
+                                <div class="rules-num flex-none">2</div>
+                                <span class="block text-gray-300 font-bold pl-4">
                                     Non-cosmetic software.
                                 </span>
                             </div>
                         </li>
                         <li class="rules-li">
                             <div class="flex items-center">
-                                <div class="rules-num">3</div>
-                                <span class="block text-gray-300 font-bold ml-4">
-                                    &nbsp;
+                                <div class="rules-num flex-none">3</div>
+                                <span class="block text-gray-300 font-bold pl-4">
                                     Hacked clients.
                                 </span>
                             </div>
                         </li>
                         <li class="rules-li">
                             <div class="flex items-center">
-                                <div class="rules-num">4</div>
-                                <span class="block text-gray-300 font-bold ml-4">
-                                    &nbsp;
+                                <div class="rules-num flex-none">4</div>
+                                <span class="block text-gray-300 font-bold pl-4">
                                     Auto-clicking.
                                 </span>
                             </div>
@@ -210,30 +209,101 @@
                         Glitches & Exploits
                     </p>
                     <p class="text-sm text-gray-500 mb-4">
-                        During your time on Minecraft Tournament, we expect you to play fair, the way we intended the server to be enjoyed. If you are
-                        caught abusing Minecraft bugs, or exploits within our own plugins, you will be punished instantly. Examples of glitches
+                        During your time on Minecraft Tournament, we expect you to play fair, the way we intended the
+                        server to be enjoyed. If you are
+                        caught abusing Minecraft bugs, or exploits within our own plugins, you will be punished
+                        instantly. Examples of glitches
                         and exploits are
                     </p>
                     <ul class="text-lg text-gray-400 mt-12">
                         <li class="rules-li">
                             <div class="flex items-center">
-                                <div class="rules-num">1</div>
-                                <span class="block text-gray-300 font-bold ml-4">
-                                    &nbsp;
+                                <div class="rules-num flex-none">1</div>
+                                <span class="block text-gray-300 font-bold pl-4">
                                     Clearly unintentional bugs with our custom systems.
                                 </span>
                             </div>
                         </li>
                     </ul>
                 </div>
-                
+
             </div>
         </div>
     </section>
 
-    <section id="faq">
-        <div class="container mx-auto px-10 md:py-16">
-            FAQ
+    <section id="faq" class="container mx-auto">
+        <div class="pb-12 mx-12">
+            <div class="text-3xl pb-1 text-white font-bold text-center">
+                FAQ
+            </div>
+            <div class="max-w-2xl mx-auto text-center text-gray-500">
+                <p>
+                    Frequently asked questions about Minecraft Tournament, its schedule,
+                    how to participate and so on and so on. Feel free to take a look!
+                    If you have any questions that weren't answered or you just want to chat
+                    feel free to join our <a href="https://discord.com/invite/X9WKPgHYpH" target="_blank" class="font-bold">Discord</a>!
+                </p>
+            </div>
+        </div>
+        <div class="md:py-16">
+            <div class="px-6 md:px-10 lg:px-20 mx-16">
+                <div class="rules pt-12">
+                    <ul class="text-lg text-gray-400 mt-12">
+                        <li class="rules-li">
+                            <div class="flex items-center">
+                                <div class="rules-num flex-none"><i class="fas fa-crown"></i></div>
+                                <span class="block text-gray-300 font-bold pl-4">
+                                    <p class="text-6xl font-bold">
+                                        What is Minecraft Tournament?
+                                    </p>
+                                    <p class="text-sm text-gray-500">
+                                        Minecraft Tournament is a privatly hosted competetive event
+                                        for <a class="font-bold"
+                                            href="https://www.minecraft.net/de-de/store/minecraft-java-edition"
+                                            target="blank">Minecraft: Java Edition <i
+                                                class="fas fa-external-link-alt"></i></a>
+                                    </p>
+                                </span>
+                            </div>
+                        </li>
+
+                        <li class="rules-li">
+                            <div class="flex items-center">
+                                <div class="rules-num flex-none"><i class="fas fa-crown"></i></div>
+                                <span class="block text-gray-300 font-bold pl-4">
+                                    <p class="text-6xl font-bold">
+                                        How does it work?
+                                    </p>
+                                    <p class="text-sm text-gray-500">
+                                        7 Teams consisting of 5 players each compete in mini-games against each other.
+                                        The better you play the more points you get! The top 2 Teams compete
+                                        against each other in a final match at the end of the event! Best Team wins!
+                                    </p>
+                                </span>
+                            </div>
+                        </li>
+
+                        <li class="rules-li">
+                            <div class="flex items-center">
+                                <div class="rules-num flex-none"><i class="fas fa-crown"></i></div>
+                                <span class="block text-gray-300 font-bold pl-4">
+                                    <p class="text-6xl font-bold">
+                                        How can i participate?
+                                    </p>
+                                    <p class="text-sm text-gray-500">
+                                        The event is private, meaning we decide who we pick out of all application. 
+                                        You can apply to compete in the event on our <a class="font-bold" href="https://minecraft-tournament.github.io/participate/" 
+                                        target="blank">Participation Form <i class="fas fa-external-link-alt"></i></a>. 
+                                        We will contact you if you are accepted!
+                                    </p>
+                                </span>
+                            </div>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+
         </div>
     </section>
 
