--- a/event/index.html
+++ b/event/index.html
@@ -275,9 +275,10 @@
                                         How does it work?
                                     </p>
                                     <p class="text-sm text-gray-500">
-                                        7 Teams consisting of 5 players each compete in mini-games against each other.
-                                        The better you play the more points you get! The top 2 Teams compete
-                                        against each other in a final match at the end of the event! Best Team wins!
+                                        7 teams with 5 players each compete against each other in minigames. The better you play, 
+                                        the more points you get. Each team has a team score, which is calculated from the points 
+                                        of the individual players. The 2 teams with the most points play against each other 
+                                        in the finale. The winner of the finale wins Minecraft Tournament!
                                     </p>
                                 </span>
                             </div>
