--- a/event/index.html
+++ b/event/index.html
@@ -232,7 +232,7 @@
     </section>
 
     <section id="faq" class="container mx-auto">
-        <div class="pb-12 mx-12">
+        <div class="pt-8 pb-12 mx-12">
             <div class="text-3xl pb-1 text-white font-bold text-center">
                 FAQ
             </div>
@@ -245,7 +245,7 @@
                 </p>
             </div>
         </div>
-        <div class="md:py-16">
+        <div class="pt-8 pb-10">
             <div class="px-6 md:px-10 lg:px-20 mx-16">
                 <div class="rules pt-12">
                     <ul class="text-lg text-gray-400 mt-12">
