Added Submitted Page, Fixed Footer

--- a/participate/submitted/index.html
+++ b/participate/submitted/index.html
@@ -9,15 +9,19 @@
     <script src="https://kit.fontawesome.com/e550f88b2c.js" crossorigin="anonymous"></script>
 
     <link rel="shortcut icon" type="image/x-icon" href="/assets/crown_32px.ico">
-    <title>Minecraft Tournament</title>
+    <title>Participate - Minecraft Tournament</title>
 </head>
 
-<body class="bg-black antialiased">
+<body class="bg-black antialiased relative text-white">
 
-    <div class="container mx-auto py-3 px-6 md:flex md:items-center md:justify-between">
-        <p class="text-white">
-            <a href="/">Back to Home</a>
-        </p>
+    <div class="container mx-auto h-100vh submitted_box">
+        <div class="submitted">
+            <h1 class="text-3xl">Thank You</h1>
+            <p>The form was submitted successfully.</p>
+            <a href="/participate">
+                <button class="back-btn">Back</button>
+            </a>
+        </div>
     </div>
 
     <footer class=" bg-yellow-400">
