--- a/participate/index.html
+++ b/participate/index.html
@@ -79,7 +79,7 @@
     <footer class=" bg-yellow-400">
         <div class="bg-yellow-500">
             <div class="container mx-auto">
-                <div class="py-1 px-6 md:flex md:items-center">
+                <div class="px-6 md:flex md:items-center">
                     <div class="socials flex flex-wrap justify-center mt-4 md:mt-0 text-ip-900">
                         <a href="https://discord.com/invite/X9WKPgHYpH" target="_blank"
                             class="block p-3 transition duration-150 ease-in-out hover:opacity-75">
