--- a/404.html
+++ b/404.html
@@ -9,15 +9,23 @@
     <script src="https://kit.fontawesome.com/e550f88b2c.js" crossorigin="anonymous"></script>
 
     <link rel="shortcut icon" type="image/x-icon" href="/assets/crown_32px.ico">
-    <title>Minecraft Tournament</title>
+    <title>Participate - Minecraft Tournament</title>
 </head>
 
-<body class="bg-black antialiased">
+<body class="bg-black antialiased relative text-white">
 
-    <div class="container mx-auto py-3 px-6 md:flex md:items-center md:justify-between">
-        <p class="text-white">
-            <a href="/">Back to Home</a>
-        </p>
+    <div class="container mx-auto h-100vh submitted_box">
+        <div class="box_404">
+            <img src="/assets/private_detective.png" width="192px">
+            <div class="submitted">
+                <h1 class="text-6xl pb-3">404</h1>
+                <p class="text-center">It looks like this page doesn't exist...</p>
+                <p class="text-center">We are incredibly sorry!</p>
+                <a href="/home">
+                    <button class="back-home-btn">Back Home</button>
+                </a>
+            </div>
+        </div>
     </div>
 
     <footer class=" bg-yellow-400">
