--- a/event/index.html
+++ b/event/index.html
@@ -72,7 +72,7 @@
             </div>
             <div class="content pt-8 pb-10">
                 <div class="rules pt-12">
-                    <p class="text-6xl font-bold">
+                    <p class="text-xl font-bold">
                         Inappropriate Chat Conduct
                     </p>
                     <p class="text-sm text-gray-500 mb-4">
