--- a/event/index.html
+++ b/event/index.html
@@ -135,7 +135,7 @@
                 </div>
 
                 <div class="rules pt-12">
-                    <p class="text-6xl font-bold">
+                    <p class="text-xl font-bold">
                         Inappropriate Behavior
                     </p>
                     <p class="text-sm text-gray-500 mb-4">
@@ -158,7 +158,7 @@
                 </div>
 
                 <div class="rules pt-12">
-                    <p class="text-6xl font-bold">
+                    <p class="text-xl font-bold">
                         Hacked Clients & Modifications
                     </p>
                     <p class="text-sm text-gray-500 mb-4">
@@ -205,7 +205,7 @@
                 </div>
 
                 <div class="rules pt-12">
-                    <p class="text-6xl font-bold">
+                    <p class="text-xl font-bold">
                         Glitches & Exploits
                     </p>
                     <p class="text-sm text-gray-500 mb-4">
@@ -253,7 +253,7 @@
                             <div class="flex items-center">
                                 <div class="rules-num flex-none"><i class="fas fa-crown"></i></div>
                                 <span class="block text-gray-300 font-bold pl-4">
-                                    <p class="text-6xl font-bold">
+                                    <p class="text-xl font-bold">
                                         What is Minecraft Tournament?
                                     </p>
                                     <p class="text-sm text-gray-500">
@@ -271,7 +271,7 @@
                             <div class="flex items-center">
                                 <div class="rules-num flex-none"><i class="fas fa-crown"></i></div>
                                 <span class="block text-gray-300 font-bold pl-4">
-                                    <p class="text-6xl font-bold">
+                                    <p class="text-xl font-bold">
                                         How does it work?
                                     </p>
                                     <p class="text-sm text-gray-500">
@@ -288,7 +288,7 @@
                             <div class="flex items-center">
                                 <div class="rules-num flex-none"><i class="fas fa-crown"></i></div>
                                 <span class="block text-gray-300 font-bold pl-4">
-                                    <p class="text-6xl font-bold">
+                                    <p class="text-xl font-bold">
                                         How can i participate?
                                     </p>
                                     <p class="text-sm text-gray-500">
